IBX-2047: Fixed misaligned errors with icon

--- a/src/bundle/Resources/public/scss/_forms.scss
+++ b/src/bundle/Resources/public/scss/_forms.scss
@@ -70,7 +70,6 @@ form:not(.form-inline) {
     font-style: normal;
     color: $ibexa-color-danger;
     line-height: calculateRem(18px);
-    flex-direction: column;
     box-sizing: border-box;
     margin-top: calculateRem(4px);
 
