--- a/src/bundle/Resources/public/scss/fieldType/edit/_base-field.scss
+++ b/src/bundle/Resources/public/scss/fieldType/edit/_base-field.scss
@@ -26,6 +26,7 @@
     .ibexa-form-error {
         min-height: calculateRem(18px);
         margin: calculateRem(4px) 0;
+        flex-direction: column;
     }
 
     &--nontranslatable,
